--- a/src/pages/tipitaka/[edition]/[volume]/index.astro
+++ b/src/pages/tipitaka/[edition]/[volume]/index.astro
@@ -1,6 +1,9 @@
 ---
 import StarlightPage from '@astrojs/starlight/components/StarlightPage.astro'
 
+// Static generation for volume overview pages (moderate volume)
+export const prerender = true;
+
 interface PageInfo {
   number: number;
   filename: string;
