--- a/src/pages/tipitaka/index.astro
+++ b/src/pages/tipitaka/index.astro
@@ -1,7 +1,7 @@
 ---
 import StarlightPage from '@astrojs/starlight/components/StarlightPage.astro'
 
-// Static generation for main tipitaka page (always prerender)
+// Static prerendering in server mode
 export const prerender = true;
 
 interface EditionInfo {
