--- a/src/pages/book.astro
+++ b/src/pages/book.astro
@@ -224,5 +224,5 @@ import MinimalLayout from '@layouts/MinimalLayout.astro';
     </div>
     
     <!-- Vanilla JavaScript Flipbook - Fixed Version -->
-    <script is:inline src="/src/assets/js/book-viewer.js"></script>
+    <script is:inline src="@assets/js/book-viewer.js"></script>
 </MinimalLayout>
